correção dos urls das imagens e ícone

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -10,6 +10,7 @@
     width: 50%;
     overflow: hidden;
     background-position: right bottom;
+    background-image: url('../Images/hero.jpg');
 }
 
 .hero-texto{
